# clipboard

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs
src/components/: EntryList.tsx  EntryRow.tsx  HintFooter.tsx  Overlay.tsx  SearchBar.tsx
src/hooks/: useClipboardEntries.ts  useKeyboardNav.ts  useOverlayLifecycle.ts
src/lib/: api.ts  format.ts  fuzzy.ts  types.ts
src/styles/: global.css  overlay.css  tokens.css
